--- a/libfido2-sys/Cargo.toml
+++ b/libfido2-sys/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "libfido2-sys"
 version = "0.1.0"
+authors = ["tyan boot <tyanboot@outlook.com>"]
+license = "MIT"
+description = "FFI bindings to Yubico fido2"
+repository = "https://github.com/tyan-boot/fido-rs"
+keywords = ["fido2", "webauthn"]
+categories = ["external-ffi-bindings"]
 edition = "2021"
+links = "fido2"
 
 build = "build.rs"
 
