--- a/fido2-rs/Cargo.toml
+++ b/fido2-rs/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 thiserror = "1.0.37"
 bitflags = "1.3.2"
 libfido2-sys = { version = "0.1.0", path = "../libfido2-sys" }
+openssl = "0.10.45"
+foreign-types = "0.3"
 
 [dev-dependencies]
 anyhow = "1.0.66"
